# python-mcp

./: main.py  pyproject.toml  start_mcp.sh
application/ports/driven/: coin_repository_port.py  conversation_repository_port.py  trading_port.py
application/ports/driving/: ai_service_port.py  coin_service_port.py  llm_service_port.py  tools_service_port.py
application/services/: ai_service.py  coin_service.py
domain/: ai.py  coin.py  historical_price.py  market.py
driven/api_rest/v1/coin/: adapter.py  mapper.py  models.py
driven/conversation/: adapter.py
driven/openai/: adapter.py
driving/api_rest/: containers.py  router.py
driving/api_rest/v1/ai/: adapter.py  models.py
driving/mcp/: mcp_server.py
driving/mcp/ai/: adapter.py
driving/mcp/crypto/: adapter.py  models.py
driving/mcp/rick_and_morty/: adapter.py
driving/mcp/rudo/: adapter.py
infrastructure/di/app/: container.py
infrastructure/mcp/: mcp_instance.py
