[tool.poetry]
name = "python-mcp"
version = "0.1.0"
description = ""
authors = ["Fernando Salom <fer@rudo.es>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32"
fastapi = "^0.115"
httpx = "^0.28"
pydantic = "^2.10"
sqlalchemy = "^2.0"
psycopg2-binary = "2.9.9"
fastmcp = "2.2.6"
openai = "^1.77.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
